# rl-experiments

./: .gitignore  Dockerfile  Taskfile.yml  debug.sh.docker.sh  evaluate.sh  pyproject.toml
a2c/: base.py  convlstm.py
cloud/: debug.sh.docker.sh  main.tf
cloud/modules/rl_experiments/: variables.tf
experiments/: experiment-001.ipynb  experiment-002.ipynb  utils.py
gym_minipacman/: __init__.py
gym_minipacman/envs/: minipacman_env.py
rl_experiments/a2c/: a2c.py  base.py  model_free_model.py
rl_experiments/experiments/: experiment-003.ipynb  experiment-004.ipynb
rl_experiments/gym_minipacman/envs/: __init__.py
rl_experiments/scripts/: evaluate.py  submit_exp.py  train.py  visualize.py
rl_experiments/utils/: agent.py  env.py  format.py  storage.py
scripts/: visualize.py
src/a2c/: a2c.py  model.py  penv.py
src/experiments/: experiment-004.ipynb
src/gym_minipacman/envs/: pacman_simple_image_viewer.py
src/scripts/: evaluate.py  train.py
src/utils/: format.py
utils/: agent.py  env.py
