[project]
name = "rl-experiments"
version = "0.1.0"
description = ""
authors = [
    {name = "Kim Young Jin",email = "kimyoungjin1001@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gymnasium",
    "torch",
    "tensorboardX",
    "minigrid",
    "numpy",
    "pandas",
    "matplotlib",
    "seaborn",
    "ipykernel (>=6.29.5,<7.0.0)",
    "boto3 (>=1.36.2,<2.0.0)",
    "wandb (>=0.19.4,<0.20.0)",
    "awscli (>=1.37.2,<2.0.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
